@@ -4,6 +4,7 @@
 
 == rufus-tokyo - 0.1.7    not yet released
 
+- todo : aligned Rufus::Tokyo::Table#new on ::Cabinet#new
 - todo : added opts (:prefix, :limit, :native) to Rufus::Tokyo::Cabinet#keys,
          Rufus::Tokyo::Table#keys and the corresponding Tyrant classes
 
